# skydel-example-plugins

./: CMakeLists.txt  README.md
.github/workflows/: style_check.yml  ubuntu_cmake_build.yml
include/skydel_plug_ins/: skydel_raw_data_observer_interface.h
include/skydel_plug_ins/custom_signal/: skydel_custom_signal_code.h  skydel_custom_signal_constellation_datas.h  skydel_custom_signal_factory_interface.h  skydel_custom_signal_initialization_datas.h  skydel_custom_signal_nav_msg.h  skydel_custom_signal_types.h  skydel_custom_signal_types_bridge.h
source/: CMakeLists.txt
source/custom_signals/: CMakeLists.txt
source/custom_signals/common/: CMakeLists.txt  coarse_acquisition_code.cpp  coarse_acquisition_code.h  custom_signal_nav_msg_from_file.cpp  custom_signal_nav_msg_from_file.h
source/custom_signals/example_beidou_b1c/: CMakeLists.txt  custom_b1c.cpp  custom_b1c.h  custom_b1c.json  custom_b1c.xml  custom_b1c_codes.cpp  custom_b1c_codes.h  custom_b1c_downlink.csv  custom_b1c_nav_message.cpp  custom_b1c_nav_message.h  custom_b1c_plugin.cpp  custom_b1c_plugin.h
source/custom_signals/example_galileo_e1/: CMakeLists.txt  custom_e1.cpp  custom_e1.h  custom_e1.json  custom_e1.xml  custom_e1_downlink.csv  custom_e1_plugin.cpp  custom_e1_plugin.h  e1_code.cpp  e1_code.h
source/custom_signals/example_glonass_g1/: CMakeLists.txt  custom_g1.cpp  custom_g1.h  custom_g1.json  custom_g1.xml  custom_g1_downlink.csv  custom_g1_plugin.cpp  custom_g1_plugin.h
source/custom_signals/example_gps_ca/: CMakeLists.txt  custom_ca.cpp  custom_ca.h  custom_ca.json  custom_ca.xml  custom_ca_downlink.csv  custom_ca_plugin.cpp  custom_ca_plugin.h
source/custom_signals/example_gps_tddm_ca/: CMakeLists.txt  custom_tddm_ca.cpp  custom_tddm_ca.h  custom_tddm_ca.json  custom_tddm_ca.xml  custom_tddm_ca_downlink.csv  custom_tddm_ca_plugin.cpp  custom_tddm_ca_plugin.h
source/custom_signals/example_qzss_ca/: CMakeLists.txt  custom_qzss_ca.cpp  custom_qzss_ca.h  custom_qzss_ca.json  custom_qzss_ca.xml  custom_qzss_ca_downlink.csv  custom_qzss_ca_plugin.cpp  custom_qzss_ca_plugin.h
source/hil_observer_plugin/: CMakeLists.txt  hil_logger.h  hil_observer_plugin.cpp  hil_observer_plugin.h  hil_observer_plugin.json  hil_observer_view.cpp  hil_observer_view.h
source/position_observer_plugin/: CMakeLists.txt  position_logger.h  position_observer_plugin.cpp  position_observer_plugin.h  position_observer_plugin.json  position_observer_view.cpp  position_observer_view.h
source/radio_time_observer_plugin/: CMakeLists.txt  delayed_broadcaster.cpp  delayed_broadcaster.h  radio_time_logger.h  radio_time_observer_plugin.cpp  radio_time_observer_plugin.h  radio_time_observer_plugin.json  radio_time_observer_view.cpp  radio_time_observer_view.h  runtime_objects.h
source/rapi_plugin/: CMakeLists.txt  rapi_plugin.cpp  rapi_plugin.h  rapi_plugin.json  rapi_plugin_command_handler.cpp  rapi_plugin_command_handler.h  rapi_plugin_view.cpp  rapi_plugin_view.h  rapi_plugin_view.ui  simple_plugin_view.h
source/raw_data_observer_plugin/: CMakeLists.txt  raw_data_logger.cpp  raw_data_logger.h  raw_data_observer_plugin.cpp  raw_data_observer_plugin.h  raw_data_observer_plugin.json
source/simple_plugin/: CMakeLists.txt  simple_plugin.cpp  simple_plugin.h  simple_plugin.json  simple_plugin_view.cpp  simple_plugin_view.h  simple_plugin_view.ui
source/transmitter_observer_plugin/: CMakeLists.txt  logger.h  runtime_position_observer.h  runtime_transmitter_observer.h  transmitter_observer_plugin.cpp  transmitter_observer_plugin.h  transmitter_observer_plugin.json  transmitter_observer_view.cpp  transmitter_observer_view.h
